Add a reader to deserialize responses from the NWIS Daily Values Service, #258.